# study-air-hockey

optimized_puck/: CMakeLists.txt  analysis.cpp  eros.h  main.cpp  tracking.h  visual_servoing.h
puck_position/: CMakeLists.txt  Roberta_left.ini  User1.ini  User11.ini
puck_position/include/: eye_tracking.h  puck_position.h
puck_position/src/: eye_tracking.cpp  puck_position.cpp
